// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nightwatch Project > v2 nested should set right path names in \`nightwatch.config.ts\` 1`] = `
"// Refer to the online docs for more details:
// https://nightwatchjs.org/gettingstarted/configuration/
//

//  _   _  _         _      _                     _          _
// | \\\\ | |(_)       | |    | |                   | |        | |
// |  \\\\| | _   __ _ | |__  | |_ __      __  __ _ | |_   ___ | |__
// | . \` || | / _\` || '_ \\\\ | __|\\\\ \\\\ /\\\\ / / / _\` || __| / __|| '_ \\\\
// | |\\\\  || || (_| || | | || |_  \\\\ V  V / | (_| || |_ | (__ | | | |
// \\\\_| \\\\_/|_| \\\\__, ||_| |_| \\\\__|  \\\\_/\\\\_/   \\\\__,_| \\\\__| \\\\___||_| |_|
//             __/ |
//            |___/

module.exports = {
  // An array of folders (excluding subfolders) where your tests are located;
  // if this is not specified, the test source must be passed as the second argument to the test runner.
  src_folders: ['apps/my-dir/my-app-e2e/src/test'],

  // See https://nightwatchjs.org/guide/concepts/page-object-model.html
  page_objects_path: ['apps/my-dir/my-app-e2e/src/support'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-custom-commands.html
  custom_commands_path: ['apps/my-dir/my-app-e2e/src/support'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-custom-assertions.html
  // custom_assertions_path: ['apps/my-dir/my-app-e2e/nightwatch/custom-assertions'],

  // See https://nightwatchjs.org/guide/extending-nightwatch/adding-plugins.html
  // plugins: ['@nightwatch/react'],

  // See https://nightwatchjs.org/guide/concepts/test-globals.html
  // globals_path: 'apps/my-dir/my-app-e2e/src/globals/globals.js',

  webdriver: {},

  test_workers: {
    enabled: true
  },
  test_settings: {
    default: {
      disable_error_log: false,
      launch_url: 'http://localhost:4200',

      screenshots: {
        enabled: false,
        path: 'screens',
        on_failure: true,
      },

      desiredCapabilities: {
        browserName: 'chrome',
      },

      webdriver: {
        start_process: true,
        server_path: '',
        cli_args: [
          // --verbose
        ],
      },
    },
    chrome: {
      desiredCapabilities: {
        browserName: 'chrome',
        'goog:chromeOptions': {
          // More info on Chromedriver: https://sites.google.com/a/chromium.org/chromedriver/
          //
          // w3c:false tells Chromedriver to run using the legacy JSONWire protocol (not required in Chrome 78)
          w3c: true,
          args: [
            //'--no-sandbox',
            //'--ignore-certificate-errors',
            //'--allow-insecure-localhost',
            //'--headless'
          ],
        },
      },
      firefox: {
        desiredCapabilities: {
          browserName: 'firefox',
          alwaysMatch: {
            acceptInsecureCerts: true,
            'moz:firefoxOptions': {
              args: [
                // '-headless',
                // '-verbose'
              ],
            },
          },
        },
        webdriver: {
          start_process: true,
          server_path: '',
          cli_args: [
            // very verbose geckodriver logs
            // '-vv'
          ],
        },
      },
      edge: {
        desiredCapabilities: {
          browserName: 'MicrosoftEdge',
          'ms:edgeOptions': {
            w3c: true,
            // More info on EdgeDriver: https://docs.microsoft.com/en-us/microsoft-edge/webdriver-chromium/capabilities-edge-options
            args: [
              //'--headless'
            ],
          },
        },
        webdriver: {
          start_process: true,
          // Follow https://docs.microsoft.com/en-us/microsoft-edge/webdriver-chromium/?tabs=c-sharp#download-microsoft-edge-webdriver
          // to download the Edge WebDriver and set the location of extracted \`msedgedriver\` below:
          server_path: '',
          cli_args: [
            // --verbose
          ],
        },
      },
    },
  },

  usage_analytics: {
    enabled: false,
    log_path: './logs/analytics',
    client_id: 'f9eed027-3a2d-4157-8cb5-d591acdc0095'
  }
};
"
`;

exports[`nightwatch Project > v2 nested should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "nightwatch",
      "node",
    ],
  },
  "extends": "../../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "nightwatch.conf.ts",
  ],
}
`;

exports[`nightwatch Project > v2 should set right path names in \`nightwatch.config.ts\` 1`] = `null`;

exports[`nightwatch Project > v2 should set right path names in \`tsconfig.e2e.json\` 1`] = `
Object {
  "compilerOptions": Object {
    "allowJs": true,
    "outDir": "../../dist/out-tsc",
    "sourceMap": false,
    "types": Array [
      "nightwatch",
      "node",
    ],
  },
  "extends": "../../tsconfig.base.json",
  "include": Array [
    "src/**/*.ts",
    "src/**/*.js",
    "nightwatch.conf.ts",
  ],
}
`;
